# deep-subtitle-translator

./: .gitignore  .tool-versions  README.md  pyproject.toml
.direnv/python-3.11/: pyvenv.cfg
src/: self-translator.py  utils.py
